--- a/index.html
+++ b/index.html
@@ -840,31 +840,6 @@ DESC BOTTOM ALIGN: center
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/3.jpg" alt="Cards 3col Icons Example">
-                        </div>
-                        <div class="section-content">
-                        <h4>Cards 3col Icons</h4>
-                        <pre>/* start */
-LAYOUT: Cards 3col
-CONTAINER WIDTH: 1200 | 92%
-CONTAINER ALIGN: center
-CARDS WRAP: center
-CARD WIDTH: 340px  
-CARD SHADOW: 0 10px 32px rgba(0,0,0,.12)
-TITLE: [TITLE]
-HEADING: H2
-
-ICON: 🚗 | [TITLE1] | [DESC1]
-ICON: 🧽 | [TITLE2] | [DESC2]
-ICON: ✨ | [TITLE3] | [DESC3]
-ICON: 🛡️ | [TITLE4] | [DESC4]
-ICON: 🪟 | [TITLE5] | [DESC5]
-/* end */</pre>
-                        </div>
-                    </div>
-
-                    <div class="section">
-                        <div class="section-media">
                             <img src="screenshots/cards-columns/4.jpg" alt="Cards 3col Steps Example">
                         </div>
                         <div class="section-content">
@@ -922,6 +897,116 @@ IMG: https://beontop.netlify.app/16x9-1600x900.jpg | [TITLE4] | [DESC4] | [BTN T
 
 DESC BOTTOM: [BOTTOM DESC]
 DESC BOTTOM ALIGN: center
+/* end */</pre>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/cards-columns/6.jpg" alt="Cards 3col Icons Example">
+                        </div>
+                        <div class="section-content">
+                        <h4>Cards 3col Icons</h4>
+                        <pre>/* start */
+LAYOUT: Cards 3col
+CONTAINER WIDTH: 1200 | 92%
+CONTAINER ALIGN: center
+CARDS WRAP: center
+CARD WIDTH: 340px  
+CARD SHADOW: 0 10px 32px rgba(0,0,0,.12)
+CARD ALIGN: left
+TITLE: [TITLE]
+HEADING: H2
+
+ICON: 🚗 | [TITLE1] | [DESC1]
+ICON: 🧽 | [TITLE2] | [DESC2]
+ICON: ✨ | [TITLE3] | [DESC3]
+ICON: 🛡️ | [TITLE4] | [DESC4]
+ICON: 🪟 | [TITLE5] | [DESC5]
+ICON: 🔧 | [TITLE6] | [DESC6]
+/* end */</pre>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/cards-columns/3.jpg" alt="Cards 3col Icons Example">
+                        </div>
+                        <div class="section-content">
+                        <h4>Cards 3col Icons</h4>
+                        <pre>/* start */
+LAYOUT: Cards 3col
+CONTAINER WIDTH: 1200 | 92%
+CONTAINER ALIGN: center
+CARDS WRAP: center
+CARD WIDTH: 340px  
+CARD SHADOW: 0 10px 32px rgba(0,0,0,.12)
+TITLE: [TITLE]
+HEADING: H2
+
+ICON: 🚗 | [TITLE1] | [DESC1]
+ICON: 🧽 | [TITLE2] | [DESC2]
+ICON: ✨ | [TITLE3] | [DESC3]
+ICON: 🛡️ | [TITLE4] | [DESC4]
+ICON: 🪟 | [TITLE5] | [DESC5]
+/* end */</pre>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/cards-columns/7.jpg" alt="Cards 4col Icons Right Example">
+                        </div>
+                        <div class="section-content">
+                        <h4>Cards 4col Icons Right</h4>
+                        <pre>/* start */
+LAYOUT: Cards 4col
+CONTAINER WIDTH: 1200 | 92%
+CONTAINER ALIGN: center
+CARDS WRAP: center
+CARD WIDTH: 360px
+CARD RADIUS: 24px
+CARD SHADOW: soft
+CARD ALIGN: left
+CARD ALIGN ICON: right
+TITLE: [TITLE]
+HEADING: H2
+
+ICON: 🚗 | [TITLE1] | [DESC1]
+ICON: 🧽 | [TITLE2] | [DESC2]
+ICON: ✨ | [TITLE3] | [DESC3]
+/* end */</pre>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/cards-columns/8.jpg" alt="Cards 3col Icons Left Example">
+                        </div>
+                        <div class="section-content">
+                        <h4>Cards 3col Icons Left</h4>
+                        <pre>/* start */
+LAYOUT: Cards 3col
+CONTAINER WIDTH: 1200 | 92%
+CONTAINER ALIGN: center
+CARDS WRAP: center
+CARD WIDTH: 360px
+CARD RADIUS: 24px
+CARD SHADOW: soft
+CARD ALIGN: left
+CARD ALIGN ICON: left
+ICON BG: #f5f5f5
+ICON COLOR: #000000
+ICON BORDER: 2px solid rgba(51,65,85,.25)
+TITLE: [TITLE]
+HEADING: H2
+
+ICON: 1 | [TITLE1] | [DESC1]
+ICON: 2 | [TITLE2] | [DESC2]
+ICON: 3 | [TITLE3] | [DESC3]
+ICON: 4 | [TITLE4] | [DESC4]
+ICON: 5 | [TITLE5] | [DESC5]
+ICON: 6 | [TITLE6] | [DESC6]
 /* end */</pre>
                         </div>
                     </div>
@@ -1205,7 +1290,7 @@ IMG: https://beontop.netlify.app/16x9-1600x900.jpg | |
                     
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/6.jpg" alt="Cards Testimonials Example">
+                            <img src="screenshots/testimonials/1.jpg" alt="Cards Testimonials Example">
                         </div>
                         <div class="section-content">
                         <h4>Cards Testimonials</h4>
@@ -1233,7 +1318,7 @@ ICON: ⭐️⭐️⭐️⭐️⭐️| [NAME3] | "[TESTIMONIAL3]"
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/7.jpg" alt="Cards Reviews Extended Example">
+                            <img src="screenshots/testimonials/2.jpg" alt="Cards Reviews Extended Example">
                         </div>
                         <div class="section-content">
                         <h4>Cards Reviews Extended</h4>
