Add Cards icon-right section and remove old icon sections

--- a/index.html
+++ b/index.html
@@ -960,59 +960,30 @@ ICON: 🪟 | TITLE5 | DESC5
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/7.jpg" alt="Cards 4col Icons Right Example">
+                            <img src="screenshots/cards-columns/7.jpg" alt="Cards icon-right Example">
                         </div>
                         <div class="section-content">
-                        <h4>Cards 4col Icons Right</h4>
-                        <pre>/* start */
-LAYOUT: Cards 4col
+                        <h4>Cards icon-right</h4>
+                        <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards icon-right
+TITLE: TITLE
+HEADING: H2
 CONTAINER WIDTH: 1200 | 92%
 CONTAINER ALIGN: center
 CARDS WRAP: center
-CARD WIDTH: 360px
-CARD RADIUS: 24px
-CARD SHADOW: soft
-CARD ALIGN: left
-CARD ALIGN ICON: right
-TITLE: TITLE
-HEADING: H2
+COLS: 3
+ICON SIZE: medium
+CARD ALIGN: center
+CARD BG: #f5f5f5
+DESC TOP: TOP DESC
+DESC TOP ALIGN: center
 
-ICON: 🚗 | TITLE1 | DESC1
-ICON: 🧽 | TITLE2 | DESC2
-ICON: ✨ | TITLE3 | DESC3
-/* end */</pre>
-                        </div>
-                    </div>
-
-                    <div class="section">
-                        <div class="section-media">
-                            <img src="screenshots/cards-columns/8.jpg" alt="Cards 3col Icons Left Example">
-                        </div>
-                        <div class="section-content">
-                        <h4>Cards 3col Icons Left</h4>
-                        <pre>/* start */
-LAYOUT: Cards 3col
-CONTAINER WIDTH: 1200 | 92%
-CONTAINER ALIGN: center
-CARDS WRAP: center
-CARD WIDTH: 360px
-CARD RADIUS: 24px
-CARD SHADOW: soft
-CARD ALIGN: left
-CARD ALIGN ICON: left
-ICON BG: #f5f5f5
-ICON COLOR: #000000
-ICON BORDER: 2px solid rgba(51,65,85,.25)
-TITLE: TITLE
-HEADING: H2
-
-ICON: 1 | TITLE1 | DESC1
-ICON: 2 | TITLE2 | DESC2
-ICON: 3 | TITLE3 | DESC3
-ICON: 4 | TITLE4 | DESC4
-ICON: 5 | TITLE5 | DESC5
-ICON: 6 | TITLE6 | DESC6
-/* end */</pre>
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Data Analytics | Get comprehensive insights into your business performance with real-time dashboards and detailed reporting tools
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Fast Loading | Experience lightning-fast page speeds with our optimized infrastructure and advanced caching technologies
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Security | Protect your data with enterprise-grade encryption and multi-layer security protocols for maximum peace of mind
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Mobile Ready | Seamlessly responsive design that works perfectly across all devices and screen sizes for optimal user experience
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Smart Features | Leverage AI-powered automation and intelligent recommendations to streamline your workflow and boost productivity
+/* end */</pre></div>
                         </div>
                     </div>
 
