Add Cards icon-left layout support and update examples with proper images

--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@ ICON: 🪟 | TITLE5 | DESC5
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/cards-columns/7.jpg" alt="Cards icon-right Example">
+                            <img src="screenshots/cards-columns/Cards icon-right.jpg" alt="Cards icon-right Example">
                         </div>
                         <div class="section-content">
                         <h4>Cards icon-right</h4>
@@ -983,6 +983,38 @@ IMG: https://beontop.netlify.app/1x1-600x600.jpg | Fast Loading | Experience lig
 IMG: https://beontop.netlify.app/1x1-600x600.jpg | Security | Protect your data with enterprise-grade encryption and multi-layer security protocols for maximum peace of mind
 IMG: https://beontop.netlify.app/1x1-600x600.jpg | Mobile Ready | Seamlessly responsive design that works perfectly across all devices and screen sizes for optimal user experience
 IMG: https://beontop.netlify.app/1x1-600x600.jpg | Smart Features | Leverage AI-powered automation and intelligent recommendations to streamline your workflow and boost productivity
+/* end */</pre></div>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/cards-columns/Cards icon-left.jpg" alt="Cards icon-left Example">
+                        </div>
+                        <div class="section-content">
+                        <h4>Cards icon-left</h4>
+                        <div class="code-wrapper"><pre>/* start */
+LAYOUT: Cards icon-left
+TITLE: Our Services
+HEADING: H2
+CONTAINER WIDTH: 1200 | 100%
+CONTAINER ALIGN: center
+CARDS WRAP: center
+COLS: 3
+ICON SIZE: small
+CARD ALIGN: center
+CARD BG: #f5f5f5
+DESC TOP: Professional solutions for your business needs
+DESC TOP ALIGN: center
+
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Data Analytics | Get comprehensive insights into your business performance with real-time dashboards and detailed reporting tools
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Fast Loading | Experience lightning-fast page speeds with our optimized infrastructure and advanced caching technologies
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Security | Protect your data with enterprise-grade encryption and multi-layer security protocols for maximum peace of mind
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Mobile Ready | Seamlessly responsive design that works perfectly across all devices and screen sizes for optimal user experience
+IMG: https://beontop.netlify.app/1x1-600x600.jpg | Smart Features | Leverage AI-powered automation and intelligent recommendations to streamline your workflow and boost productivity
+
+DESC BOTTOM: Professional solutions for your business needs
+DESC BOTTOM ALIGN: center
 /* end */</pre></div>
                         </div>
                     </div>
