--- a/BeOnTop (HTML Generator) - актуальный/sidebar.html
+++ b/BeOnTop (HTML Generator) - актуальный/sidebar.html
@@ -693,40 +693,108 @@ details.bot-faq__item > summary.bot-faq__q:focus{
   object-fit: contain;
 }
 
+/* Карточки с иконкой слева и заголовком справа */
+.bot-cards--icon-left .bot-card{ 
+  padding: 1rem; 
+  background-color: var(--bot-card-bgcolor, #f5f5f5);
+}
+.bot-cards--icon-left .bot-card__row{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+.bot-cards--icon-left .bot-card__header{ 
+  display:flex; 
+  flex-direction:column; 
+  gap:.25rem; 
+  text-align: right;
+}
+
+.bot-cards--icon-left .bot-card__title{
+  margin: 0;
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+.bot-cards--icon-left .bot-card__text{ 
+  margin:.5rem 0 0 0; 
+  font-size:.9rem; 
+  line-height:1.4; 
+  color: var(--bot-text-muted, #666);
+  text-align: left;
+}
+
+.bot-cards--icon-left .bot-card__icon{
+  flex-shrink: 0;
+  width: 48px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  background: transparent;
+  border-radius: var(--bot-card-icon-radius, 8px);
+  overflow: hidden;
+}
+
+.bot-cards--icon-left .bot-card__icon img{
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 /* Размеры иконок */
-.bot-cards--icon-right .bot-card__icon--small{
+.bot-cards--icon-right .bot-card__icon--small,
+.bot-cards--icon-left .bot-card__icon--small{
   width: 50px;
   height: 50px;
   font-size: 20px;
 }
 
-.bot-cards--icon-right .bot-card__icon--medium{
+.bot-cards--icon-right .bot-card__icon--medium,
+.bot-cards--icon-left .bot-card__icon--medium{
   width: 80px;
   height: 80px;
   font-size: 32px;
 }
 
-.bot-cards--icon-right .bot-card__icon--large{
+.bot-cards--icon-right .bot-card__icon--large,
+.bot-cards--icon-left .bot-card__icon--large{
   width: 120px;
   height: 120px;
   font-size: 48px;
 }
 
 @media (max-width: 768px){
-  .bot-cards--icon-right .bot-card{ padding: .75rem; }
-  .bot-cards--icon-right .bot-card__row{ gap:.75rem; }
-  .bot-cards--icon-right .bot-card__icon{ width: 40px; height: 40px; font-size: 20px; }
-  .bot-cards--icon-right .bot-card__icon--small{
+  .bot-cards--icon-right .bot-card,
+  .bot-cards--icon-left .bot-card{ 
+    padding: .75rem; 
+  }
+  .bot-cards--icon-right .bot-card__row,
+  .bot-cards--icon-left .bot-card__row{ 
+    gap:.75rem; 
+  }
+  .bot-cards--icon-right .bot-card__icon,
+  .bot-cards--icon-left .bot-card__icon{ 
+    width: 40px; 
+    height: 40px; 
+    font-size: 20px; 
+  }
+  .bot-cards--icon-right .bot-card__icon--small,
+  .bot-cards--icon-left .bot-card__icon--small{
     width: 40px;
     height: 40px;
     font-size: 16px;
   }
-  .bot-cards--icon-right .bot-card__icon--medium{
+  .bot-cards--icon-right .bot-card__icon--medium,
+  .bot-cards--icon-left .bot-card__icon--medium{
     width: 60px;
     height: 60px;
     font-size: 24px;
   }
-  .bot-cards--icon-right .bot-card__icon--large{
+  .bot-cards--icon-right .bot-card__icon--large,
+  .bot-cards--icon-left .bot-card__icon--large{
     width: 80px;
     height: 80px;
     font-size: 32px;
